--- a/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
@@ -52,125 +52,71 @@
                     <div class="sw-order-list__content">
 
                         {% block sw_order_list_grid %}
-                            <sw-grid v-if="total || term"
-                                     :items="orders"
-                                     :sortBy="sortBy"
-                                     :sortDirection="sortDirection"
-                                     :selectable="false"
-                                     :isFullpage="true"
-                                     @sort-column="onSortColumn"
-                                     @inline-edit-finish="onInlineEditSave">
+                            <sw-data-grid :dataSource="orders"
+                                          :columns="orderColumns"
+                                          :fullPage="true"
+                                          :showSettings="true"
+                                          :showSelection="false"
+                                          :sortBy="sortBy"
+                                          :sortDirection="sortDirection"
+                                          :isLoading="isLoading"
+                                          :allowColumnEdit="true"
+                                          identifier="sw-order-list"
+                                          @column-sort="onSortColumn">
 
-                                {% block sw_order_list_grid_slots %}
-                                    <template slot="columns" slot-scope="{ item }">
+                                {% block sw_order_list_grid_columns %}
+                                    {% block sw_order_list_grid_columns_customer_name %}
+                                        <template slot="column-orderCustomer.firstName" slot-scope="{ item }">
+                                            {{ item.orderCustomer.firstName }} {{ item.orderCustomer.lastName }}
+                                        </template>
+                                    {% endblock %}
 
+                                    {% block sw_order_list_grid_columns_billing_address %}
+                                        <template slot="column-billingAddressId" slot-scope="{ item }">
+                                            {{ getBillingAddress(item).street }},
+                                            {{ getBillingAddress(item).zipcode }}
+                                            {{ getBillingAddress(item).city }}
+                                        </template>
+                                    {% endblock %}
 
-                                        {% block sw_order_list_grid_columns_order_number%}
-                                        <sw-grid-column flex="minmax(100px, 180px)"
-                                                        :label="$tc('sw-order.list.columnOrderNumber')"
-                                                        dataIndex="id"
-                                                        truncate
-                                                        sortable>
-                                            {% block sw_order_list_grid_columns_order_number_label %}
-                                            <router-link :to="{ name: 'sw.order.detail', params: { id: item.id } }" class="sw-order-list__column-order-number">
-                                                {{ item.id }}
-                                            </router-link>
-                                            {% endblock %}
-                                        </sw-grid-column>
+                                    {% block sw_order_list_grid_columns_amount %}
+                                        <template slot="column-amountTotal" slot-scope="{ item }">
+                                            {{ item.amountTotal | currency(item.currency.meta.viewData.shortName) }}
+                                        </template>
+                                    {% endblock %}
+
+                                    {% block sw_order_list_grid_columns_state %}
+                                        <template slot="column-stateMachineState.name" slot-scope="{ item }">
+                                            <sw-label small>{{ item.stateMachineState.name }}</sw-label>
+                                        </template>
+                                    {% endblock %}
+
+                                    {% block sw_order_list_grid_columns_order_date %}
+                                        <template slot="column-date" slot-scope="{ item }">
+                                            {{ item.date | date }}
+                                        </template>
+                                    {% endblock %}
+                                {% endblock %}
+
+                                {% block sw_order_list_grid_columns_actions %}
+                                    <template slot="actions" slot-scope="{ item }">
+                                        {% block sw_customer_list_grid_columns_actions_view %}
+                                            <sw-context-menu-item class="sw-order-list__order-view-action" :routerLink="{ name: 'sw.order.detail', params: { id: item.id } }">
+                                                {{ $tc('sw-order.list.contextMenuView') }}
+                                            </sw-context-menu-item>
                                         {% endblock %}
 
-                                        {% block sw_order_list_grid_columns_customer_name %}
-                                            <sw-grid-column flex="minmax(100px, 1fr)"
-                                                            :label="$tc('sw-order.list.columnCustomerName')"
-                                                            dataIndex="orderCustomer.firstName,orderCustomer.lastName"
-                                                            truncate
-                                                            sortable>
-                                                {% block sw_order_list_grid_columns_customer_name_label %}
-                                                    {{ item.orderCustomer.firstName }} {{ item.orderCustomer.lastName }}
-                                                {% endblock %}
-                                            </sw-grid-column>
+                                        {% block sw_customer_list_grid_columns_actions_confirm_payment %}
+                                            <sw-context-menu-item disabled>
+                                                {{ $tc('sw-order.list.contextMenuConfirmPayment') }}
+                                            </sw-context-menu-item>
                                         {% endblock %}
 
-                                        {% block sw_order_list_grid_columns_billing_address %}
-                                            <sw-grid-column flex="minmax(100px, 1fr)"
-                                                            :label="$tc('sw-order.list.columnBillingAddress')"
-                                                            dataIndex="billingAddress.street"
-                                                            truncate
-                                                            sortable>
-                                                {% block sw_order_list_grid_columns_billing_address_label %}
-                                                    {{ getBillingAddress(item).street }},
-                                                    {{ getBillingAddress(item).zipcode }}
-                                                    {{ getBillingAddress(item).city }}
-                                                {% endblock %}
-                                            </sw-grid-column>
+                                        {% block sw_customer_list_grid_columns_actions_delete %}
+                                            <sw-context-menu-item variant="danger" disabled>
+                                                {{ $tc('sw-order.list.contextMenuDelete') }}
+                                            </sw-context-menu-item>
                                         {% endblock %}
-
-                                        {% block sw_order_list_grid_columns_amount %}
-                                            <sw-grid-column flex="minmax(80px, 180px)"
-                                                            :label="$tc('sw-order.list.columnAmount')"
-                                                            dataIndex="amountTotal"
-                                                            align="right"
-                                                            truncate
-                                                            sortable>
-                                                {% block sw_order_list_grid_columns_amount_label %}
-                                                    {{ item.amountTotal | currency(item.currency.meta.viewData.shortName) }}
-                                                {% endblock %}
-                                            </sw-grid-column>
-                                        {% endblock %}
-
-                                        {% block sw_order_list_grid_columns_state %}
-                                            <sw-grid-column flex="minmax(80px, 180px)"
-                                                            :label="$tc('sw-order.list.columnState')"
-                                                            dataIndex="stateMachineState.name"
-                                                            truncate
-                                                            sortable>
-                                                {% block sw_order_list_grid_columns_state_label %}
-                                                    {{ item.stateMachineState.meta.viewData.name }}
-                                                {% endblock %}
-                                            </sw-grid-column>
-                                        {% endblock %}
-
-                                        {% block sw_order_list_grid_columns_order_date %}
-                                            <sw-grid-column flex="minmax(90px, 180px)"
-                                                            :label="$tc('sw-order.list.orderDate')"
-                                                            dataIndex="date"
-                                                            truncate
-                                                            sortable>
-                                                {% block sw_order_list_grid_columns_order_date_label %}
-                                                    {{ item.date | date }}
-                                                {% endblock %}
-                                            </sw-grid-column>
-                                        {% endblock %}
-
-                                        {% block sw_order_list_grid_columns_actions %}
-                                            <sw-grid-column flex="minmax(100px, 100px)"
-                                                            align="center">
-                                                {% block sw_order_list_grid_columns_actions_context_button %}
-                                                    <sw-context-button>
-
-                                                        {% block sw_customer_list_grid_columns_actions_view %}
-                                                            <sw-context-menu-item class="sw-order-list__order-view-action" :routerLink="{ name: 'sw.order.detail', params: { id: item.id } }">
-                                                                {{ $tc('sw-order.list.contextMenuView') }}
-                                                            </sw-context-menu-item>
-                                                        {% endblock %}
-
-                                                        {% block sw_customer_list_grid_columns_actions_confirm_payment %}
-                                                            <sw-context-menu-item disabled>
-                                                                {{ $tc('sw-order.list.contextMenuConfirmPayment') }}
-                                                            </sw-context-menu-item>
-                                                        {% endblock %}
-
-                                                        {% block sw_customer_list_grid_columns_actions_delete %}
-                                                            <sw-context-menu-item variant="danger" disabled>
-                                                                {{ $tc('sw-order.list.contextMenuDelete') }}
-                                                            </sw-context-menu-item>
-                                                        {% endblock %}
-
-                                                    </sw-context-button>
-                                                {% endblock %}
-                                            </sw-grid-column>
-                                        {% endblock %}
-
                                     </template>
                                 {% endblock %}
 
@@ -184,32 +130,24 @@
                                         </sw-pagination>
                                     {% endblock %}
                                 </template>
-
-
-
-                            </sw-grid>
+                            </sw-data-grid>
                         {% endblock %}
 
                         {% block sw_order_list_empty_state %}
-                            <sw-empty-state v-else-if="!isLoading && !total" :title="$tc('sw-order.list.messageEmpty')"></sw-empty-state>
-                        {% endblock %}
-
-                        {% block sw_order_list_grid_loader %}
-                            <sw-loader v-if="isLoading"></sw-loader>
+                            <sw-empty-state v-if="!isLoading && !total" :title="$tc('sw-order.list.messageEmpty')"></sw-empty-state>
                         {% endblock %}
                     </div>
                 {% endblock %}
-
             </template>
 
             {% block sw_order_list_sidebar %}
                 <sw-sidebar slot="sidebar">
                     {% block sw_order_list_sidebar_refresh %}
-                    <sw-sidebar-item
+                        <sw-sidebar-item
                             icon="default-arrow-360-left"
                             :title="$tc('sw-order.list.titleSidebarItemRefresh')"
                             @click="onRefresh">
-                    </sw-sidebar-item>
+                        </sw-sidebar-item>
                     {% endblock %}
                 </sw-sidebar>
             {% endblock %}
