--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
@@ -47,6 +47,39 @@
                                       v-model="manufacturer.link">
                             </sw-field>
                             {% endblock %}
+
+                            <div v-if="manufacturer.catalogId" class="sw-manufacturer-image-pane" :class="logoFieldClasses">
+                                <div v-if="!manufacturer.mediaId && !manufacturer.isLoading"
+                                     class="sw-manufacturer-detail__logo-upload">
+                                    {% block sw_manufacturer_detail_logo_upload %}
+                                        <span class="sw-manufacturer-detail__upload-caption">
+                                            {{ $tc('sw-manufacturer.detail.addLogoCaption') }}
+                                        </span>
+                                        <sw-media-upload-button :catalogId="manufacturer.catalogId"
+                                                                :allowMultiSelect="false"
+                                                                :compact="false"
+                                                                ref="uploadComponent"
+                                                                @media-upload-success="onSuccessfulImageUpload">
+                                        </sw-media-upload-button>
+                                    {% endblock %}
+                                </div>
+
+                                <template v-else-if="mediaItem">
+                                    {% block sw_manufacturer_detail_logo %}
+                                        <sw-media-preview class="sw-manufacturer-detail__logo"
+                                                          :item="mediaItem" :transparency="false">
+                                        </sw-media-preview>
+                                    {% endblock %}
+
+                                    {% block sw_manufacturer_detail_logo_unlink_button %}
+                                        <sw-button class="sw-manufacturer-detail__delete-logo"
+                                                   variant="danger"
+                                                   @click="onUnlinkLogo">
+                                            <sw-icon color="#fff" name="default-action-trash" medium></sw-icon>
+                                        </sw-button>
+                                    {% endblock %}
+                                </template>
+                            </div>
                         </sw-container>
 
                         {% block sw_manufacturer_detail_base_info_field_description %}
