NEXT-679 - Integrate core changes from media

--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
@@ -54,11 +54,12 @@
                 {% endblock %}
 
                 {% block sw_media_catalog_smart_bar_media_upload %}
-                    <sw-media-upload
+                    <sw-media-upload-button
                         :catalogId="getCatalogId()"
+                        :compact="true"
                         @new-media-entity="onNewMedia"
                         @new-upload-started="onNewUpload">
-                    </sw-media-upload>
+                    </sw-media-upload-button>
                 {% endblock %}
 
             </template>
